--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,10 @@ jobs:
       - run: echo "Deploying to production server"
 
 workflows:
-  build_now:
+  build_and_test:
     jobs:
       - build
+      - test:
+          requires:
+            - build 
      
